[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freeze-tracker"
version = "0.1.0"
description = "Freeze Tracker"
keywords = [
  "python", "vscode", "panel"
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.11"
dependencies = [
  "bokeh",
  "configparser",
  "dash",
  "dash-core-components",
  "dash-html-components",
  "faker",
  "folium",
  "geopandas",
  "gunicorn",
  "holoviews",
  "hvplot",
  "matplotlib",
  "openpyxl",
  "pandas",
  "panel",
  "plotly",
  "pylightxl",
  "python-dotenv",
  "requests",
  "scikit-learn",
  "xgboost",
  "yfinance"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "isort",
    "pyright",
    "pytest",
    "pytest-cov",
    "sphinx"
]

[project.urls]
"Homepage" = "https://github.com/denisecase/freeze-tracker/"
"Issues" = "https://github.com/denisecase/freeze-tracker/issues"
"Pages" = "https://denisecase.github.io/freeze-tracker/"


[tool.black]
line-length = 100
extend-exclude = '''
/(
  | .env
  | .venv
  | venv
  | notebooks
)/
'''

[tool.isort]
src_paths = ["src", "tests"]

[tool.pyright]
venvPath = "./venv"
pythonVersion = "3.11"
reportMissingTypeStubs = false
reportUntypedFunction = true

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["E501"]
# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"*.py" = ["E402"]


[tool.sphinx-autobuild]
watch = ["./docs"]
ignore = ["./docs/_build"]
open-browser = false

[tool.sphinx]
project = "Freeze Tracker"
version = "0.1"
release = "0.1.0"
config-dir = "docs"
source-dir = "src"
build-dir = "docs/_build"
master-doc = "index"
extensions = [
    "sphinx.ext.autodoc",
    "sphinx.ext.napoleon",
    "sphinx.ext.viewcode"
]
templates_path = ["_templates"]
exclude_patterns = ["_build", "Thumbs.db", ".DS_Store"]
html_theme = "alabaster"
html_static_path = ["_static"]
htmlhelp_basename = "FreezeTrackerdoc"
autodoc_mock_imports = ["pandas"]
napoleon_google_docstring = true
napoleon_numpy_docstring = true
napoleon_use_param = true
napoleon_use_ivar = true
napoleon_include_init_with_doc = true
viewcode_follow_imported_members = true
